--- a/websocket2extends/src/main/resources/static/index.html
+++ b/websocket2extends/src/main/resources/static/index.html
@@ -18,7 +18,7 @@ Welcome<br/>
 
     //判断当前浏览器是否支持WebSocket
     if('WebSocket' in window){
-        websocket = new WebSocket("ws://127.0.0.1:8001/websocket2");
+        websocket = new WebSocket("ws://127.0.0.1:8008/websocket2extends/websocket/userid="+22);
     }
     else{
         alert('Not support websocket')
